<resources>
    <string name="app_name">ZooSavvy</string>
    <string name="zoosavvy">ZooSavvy</string>
    <string name="desc_zoosavvy">Discover the Zoo\'s Wonders \n One Animal at a Time</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email_username">Email/Username</string>
    <string name="password">Password</string>
    <string name="stay_logged_in">Stay Logged in?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="already_account">Already have on account? Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account yet? Register</string>
    <string name="here">here</string>
    <string name="get_started">Get Started</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="start_running">Start Running</string>
    <string name="stop_running">Stop Running</string>
    <string name="start_point">Start Point</string>
</resources>